feat: replay following, views